--- a/QuanLyThuVien_16520584/GUI/GUI.csproj
+++ b/QuanLyThuVien_16520584/GUI/GUI.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmHeThong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmHeThong.Designer.cs">
+      <DependentUpon>frmHeThong.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPhieuPhat.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +103,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ucLapTheDocGia.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ucLapTheDocGia.Designer.cs">
+      <DependentUpon>ucLapTheDocGia.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="frmHeThong.resx">
+      <DependentUpon>frmHeThong.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLapTheDocGia.resx">
       <DependentUpon>frmLapTheDocGia.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,7 +144,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ucLapTheDocGia.resx">
+      <DependentUpon>ucLapTheDocGia.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -153,8 +172,12 @@
       <Name>DTO</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <None Include="Resources\left-arrow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\menu.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
