--- a/QuanLyThuVien_16520584/BUS/BUS.csproj
+++ b/QuanLyThuVien_16520584/BUS/BUS.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS_PhieuMuon.cs" />
+    <Compile Include="BUS_PhieuPhat.cs" />
+    <Compile Include="BUS_PhieuTra.cs" />
     <Compile Include="BUS_Sach.cs" />
     <Compile Include="BUS_TheDocGia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
