--- a/QuanLyThuVien_16520584/DTO/DTO.csproj
+++ b/QuanLyThuVien_16520584/DTO/DTO.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO_PhieuMuon.cs" />
+    <Compile Include="DTO_PhieuPhat.cs" />
+    <Compile Include="DTO_PhieuTra.cs" />
     <Compile Include="DTO_Sach.cs" />
     <Compile Include="DTO_TheDocGia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
