--- a/QuanLyThuVien_16520584/DTO/DTO.csproj
+++ b/QuanLyThuVien_16520584/DTO/DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO_PhanQuyen.cs" />
     <Compile Include="DTO_PhieuMuon.cs" />
     <Compile Include="DTO_PhieuPhat.cs" />
     <Compile Include="DTO_PhieuTra.cs" />
