--- a/QuanLyThuVien_16520584/BUS/BUS.csproj
+++ b/QuanLyThuVien_16520584/BUS/BUS.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BUS_PhieuMuon.cs" />
     <Compile Include="BUS_PhieuPhat.cs" />
     <Compile Include="BUS_PhieuTra.cs" />
+    <Compile Include="BUS_QuyDinh.cs" />
     <Compile Include="BUS_Sach.cs" />
     <Compile Include="BUS_TheDocGia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
